src/objects/Transaction_Submission__c.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transaction Submissions (Company)</relationshipLabel>
        <relationshipName>Transaction_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_1__c</fullName>
        <label>Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_2__c</fullName>
        <label>Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_1__c</fullName>
        <label>Number 1</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_2__c</fullName>
        <label>Number 2</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Presenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Presenter</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transaction Submissions (Presenter)</relationshipLabel>
        <relationshipName>Transaction_Submissions_Presented</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Text_1__c</fullName>
        <label>Text 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_2__c</fullName>
        <label>Text 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_Step_Ids__c</fullName>
        <description>Pipe delimited list of Step Ids up to the current and next Step only.</description>
        <inlineHelpText>Pipe delimited list of Step Ids up to the current and next Step only.</inlineHelpText>
        <label>Valid Step Ids</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Warning_Confirmation_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Warning Confirmation Flag</label>
        <type>Checkbox</type>
    </fields>
    <label>Transaction Submission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Warning_Confirmation_Flag__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SUB{0000}</displayFormat>
        <label>Transaction Submission Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>